# forecasting

./: .gitignore  LIGHTWEIGHT_VS_OPTIMIZED_LGB_RESULTS.md  PERFORMANCE_COMPARISON.md  README.md  test_intermittent.py  test_unit_norm.py  training_config.sample.json  visualize_hierarchical_architecture.py
deepsequence_hierarchical_attention/: .gitignore  COMPONENTS_README.md  LICENSE  README.md  feature_config.yaml  inference_utils.py  pyproject.toml  requirements.txt
deepsequence_hierarchical_attention/deepsequence_hierarchical_attention/: __init__.py  components.py  components_lightweight.py  components_v1_base.py  losses.py  model.py  model_utils.py
deepsequence_hierarchical_attention/examples/: compare_lightweight_vs_lgb.py  compare_models.py  compare_models_real_data.py  compare_rounded.py  compare_rounded_predictions.py  demo.ipynb  detailed_analysis.py  evaluation_results.txt  feature_config_loader.py  load_and_round.py  quick_rounded_check.py  train_lgb_optimized.py  train_lightweight.py  train_lightweight_adaptive_loss.py  train_lightweight_mse_loss.py
deepsequence_hierarchical_attention/examples/models/: best_lightweight.keras  lightgbm_model.txt  lightgbm_optimized.txt
examples/: DeepSequence_PWL_Demo.ipynb
models/: hierarchical_lgb_dataset.keras  lightweight_adaptive_base.keras  tabnet_hierarchical_best.keras  tabnet_hierarchical_final.keras  test_2epoch.keras
notebooks/: DeepSequence_Complete_Demo.ipynb  DeepSequence_Quick_Start.ipynb
src/deepsequence/: __init__.py  intermittent_handler.py  model.py  tabnet_encoder.py  unit_norm.py
src/deepsequence_pwl/: __init__.py  combination_layer.py  model.py  trend_component.py
src/deepsequence_pwl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/deepsequence_pwl/hierarchical_attention/: README.md  __init__.py  autoregressive.py  components.py  (+2 more)
(+2 files in other folders)
